tests/snapshots/execution_spec__test-grpc-service.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Couldn't find definitions for service YourServiceName",
    "trace": [],
    "description": null
  }
]
