tests/snapshots/execution_spec__test-hostname-faliure.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of invalid IP address syntax",
    "trace": [
      "schema",
      "@server",
      "hostname"
    ],
    "description": null
  }
]
