tests/snapshots/execution_spec__test-http-baseurl.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  bar: String
  foo: String
}

schema {
  query: Query
}
