tests/snapshots/execution_spec__test-http-headers.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "http://localhost:4000") {
  query: Query
}

type Query {
  foo: String @http(headers: [{key: "foo", value: "bar"}], path: "/foo")
}
