tests/snapshots/execution_spec__test-http-with-inline.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [],
    "description": "Path: [post, user, name] contains resolver http at [Post.user]"
  }
]
